Fixing Auth Buttons spacing

--- a/client/src/components/Navbar/components/NavLinksDesktop/NavLinksDesktop.module.css
+++ b/client/src/components/Navbar/components/NavLinksDesktop/NavLinksDesktop.module.css
@@ -1,13 +1,13 @@
 .navbar {
     display: flex;
     align-items: center;
-    gap: 3rem;
 }
 
 .navbar li a {
     font-size: 0.95rem;
     font-weight: 600;
     padding: 0.55rem 1.5rem;
+    border-radius: 10px;
 }
 
 .navbar .btn {
